Fix project code formatting
By running 'make format'

--- a/mithril-client-wasm/www/index.html
+++ b/mithril-client-wasm/www/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Mithril client WASM example</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Mithril client WASM example</title>
-</head>
-
-<body>
-  <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-  <h1>Mithril client WASM example</h1>
-  <script src="./bootstrap.js"></script>
-</body>
-
+  <body>
+    <noscript
+      >This page contains webassembly and javascript content, please enable
+      javascript in your browser.</noscript
+    >
+    <h1>Mithril client WASM example</h1>
+    <script src="./bootstrap.js"></script>
+  </body>
 </html>
